# telecoms_churn

./: app.py  note.ipynb  pyproject.toml
models/: churn_model_baseline.keras  metrics.json  preprocessing.pkl  training_summary.json
